--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ body {
 a { text-decoration: none; }
 
 h1 { 
-  font-size:4rem; 
+  font-size: 3.5rem; 
   padding-bottom: 5rem; 
   text-align: center; 
 }
@@ -95,7 +95,7 @@ header {
 
 header h1 { 
   text-align: left; 
-  padding: 0 0 10rem 0;
+  padding-bottom: 8rem;
   width: 40vw;
   color: var(--col5);
 }
