--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,17 @@
 /*-----Adam Demol 2022-----*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&');
+
 :root {
   line-height: 1.4;
   font-size: 16px;
-  font-family:Arial, 'Helvetica', sans-serif;
-  --colour1: #f9fbfd;
-  --colour2: #edc572;
-  --colour3: #394349;
-  --colour4: #111;
-  --colour5: #ccc;
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  --colour1: #f5f2f2;
+  --colour2: #a11f37;
+  --colour3: #23282c;
+  --colour4: #364d6b;
+  --colour5: #111;
+  --section-size: 2;
+  --slider-index: 1;
 }
 
 /* remove default styles from everything */
@@ -17,6 +21,7 @@
 html { scroll-behavior: smooth; }
 
 body {
+  position: relative;
   color: var(--colour4);
   background: var(--colour1);
   overflow-x: hidden;
@@ -24,233 +29,289 @@ body {
 }
 
 a {  
-  color: var(--colour3);
+  color: var(--colour1);
   text-decoration: none;
 }
 
-h1 {
-  text-align: center;
-  font-size: 3rem;
-}
+h1 { font-size: 2.4rem; }
 h2 { font-size: 1.7rem; }
 h3 { font-size: 1.1rem; }
 
 main {
-  background:linear-gradient(0deg, var(--colour5), var(--colour1));
+  background: var(--colour1);
 }
 
 section {
-  padding: 4rem 3rem;
-  max-width: 1300px;
-  margin: 0 auto;
+  display: grid;
+  justify-content: center;
+  padding: 5rem 3rem;
 }
 
 header {
-  position: relative;
-  min-height: 90vh;
-}
-
-.header-bg {
-  z-index: -1;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  transform: skewY(10deg);
-  transform-origin: 100%;
-  background-color: #EDC572;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(139,776,633)'%3E%3Cstop offset='0' stop-color='%23EDC572'/%3E%3Cstop offset='1' stop-color='%23394349'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='2000' height='1666.7' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.06'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
-  /* background by SVGBackgrounds.com */
-}
-
-.heading-wrap {
-  text-align: center;
-  color: var(--colour5);
-}
-
-.my-links {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  text-align: center;
-  color: var(--colour1);
-  width: fit-content;
-  margin: 3rem auto;
-}
-
-.my-links svg {
-  width: 30px;
-  height: 30px;
-  fill: var(--colour3);
-}
-
-.my-links .button {
   display: grid;
-  grid-template-columns: 1fr 50px;
-  width: 180px;
-}
-
-.header-btn svg {
-  width: 30px;
-  height: 30px;
-}
-
-.home h1 {
-  position: relative;
-  z-index: 99;
-  font-size: 7rem;
-  text-transform: uppercase;
-  color: var(--colour1);
-}
-
-.projects h1 {
-  font-size: 5rem;
-}
-
-.home {
-  display: grid;
+  justify-items: center;
   align-items: center;
+  padding: 3rem;
   min-height: 35vh;
 }
 
-.sub-heading {
-  font-size: 2rem;
+.headline {
+  display: grid;
+  justify-items: center;
+  text-align: center;
+  gap: 1rem;
 }
 
-.sub-heading2 {
-  font-size: 1.4rem;
-}
-
-.tooltip {
+.header-text {
   font-size: 1.2rem;
-  position: absolute;
-  bottom: 30dvh;
-  right: 15vw;
-  width: 7rem;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--colour2);
   color: var(--colour1);
+  padding: 2rem;
+  gap: 1rem;
 }
 
-.tooltip svg {
-  position: absolute;
-  right: 20px;
-  bottom: -20px;
+nav ul {
+  display: flex;
+  gap: 1rem;
+  color: var(--colour1);
+  list-style: none;
+  padding: 1rem;
 }
 
-.button {
+nav ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: .7rem;
-  font-size: 1rem;
-  font-weight: normal;
-  width: 150px;
-  height: 50px;
-  background: var(--colour1);
-  transition: all 200ms ease-in-out;
+  width: fit-content;
+  border-bottom: 5px solid var(--colour2);
+  transition: all 100ms ease-in-out;
 }
 
-.button:hover {
-  background: var(--colour2);
+nav ul li a:hover {
+  border-bottom: 3px solid var(--colour1);
 }
 
-/*----- Projects -----*/
+.nav-header {
+  font-size: 2rem;
+}
+
+.cta {
+  width: fit-content;
+  padding: 1rem 1.6rem;
+  border: .3rem solid var(--colour3);
+  border-radius: 10px;
+  color: white;
+  transition: 200ms ease-in-out;
+  text-decoration: none;
+  display: block;
+  font-size: 1.2rem;
+  color: var(--colour3);
+  box-shadow: 0px 5px, 0px 7px 10px #999;
+  margin-top: 1rem;
+}
+
+.cta:hover {
+  box-shadow: unset;
+  transform: translateY(4px);
+}
 
 .projects {
-  color: var(--colour3);
-  padding: 4rem 3rem 20rem 3rem;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
+  padding: 5rem;
+}
+
+.projects h1 {
+  text-align: center;
+  margin-bottom: 4rem;
 }
 
 .projects-wrap {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, auto)) ;
-  gap: 4rem;
-  max-width: 1700px;
-  min-width: 250px;
-  margin: 3rem auto 0 auto;
-}
-
-.project-card h2 {
-  color: var(--colour2);
+  grid-template-columns: repeat(auto-fill, 600px);
+  justify-content: center;
+  gap: 5rem;
+  max-width: 1300px;
+  min-width: 500px;
 }
 
 .project-card {
+  font-size: .9rem;
   display: grid;
-  gap: .7rem;
-  position: relative;
-  padding: 3rem;
-  overflow: hidden;
-  background: var(--colour3);
+  gap: 1.5rem;
+  padding: 8rem 3rem 3rem 3rem;
+  background: var(--colour4);
   color: var(--colour1);
-
-  opacity: 0;
-  transform: translate(10px, 100px);
-  transition: all 1.2s cubic-bezier(.29,.83,.55,1.11);
+  position: relative;
+  box-shadow: -8px 8px 10px 0 #999;
 }
 
-.project-card p {
+.project-card h2 {
+  position: absolute;
+  border-left: 10px solid var(--colour2);
+  background: var(--colour1);
   color: var(--colour5);
+  width: 100%;
+  top:0;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  padding-left: 3rem;
 }
 
 .project-btns {
-  margin-top: 10px;
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
+}
+
+.dark-section {
+  background: linear-gradient(135deg, #373f46, #23282c);
+  box-shadow: 0 0 20px 0 #888;
+}
+
+.img {
+  width: 20rem;
+  height: 10rem;
+  object-fit: cover;
+  box-shadow: 6px 6px 10px 0 var(--colour5);
+}
+
+.divider {
+  display: flex;
+  gap: 4rem;
+  color: var(--colour1);
+}
+
+.gallery-btn {
+  display: grid;
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  width: fit-content;
+  padding: .8rem 1rem;
+  transition: all 150ms ease-in-out;
+}
+
+.project-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-radius: 10px;
+  border: 4px solid var(--colour3);
+  padding: .5rem .9rem;
+  transition: all 150ms ease-in-out;
+}
+
+.project-btn:hover {
+  background: var(--colour3);
 }
 
 .project-btns svg {
-  fill: var(--colour3);
   width: 30px;
+  fill: var(--colour1);
+  transition: all 150ms ease-in-out;
 }
 
-@media screen and (max-width:700px) {
+.gallery-btn {
+  border: 4px solid var(--colour1);
+  background: unset;
+  color: var(--colour1);
+  font-size: 1rem;
+  cursor: pointer;
+}
 
-  .projects {
-    padding: 3rem 1.5rem;
-  }
+.gallery-btn:hover {
+  background: var(--colour1);
+  color: var(--colour4);
+}
 
-  .project-card {
-    padding: 1.5rem;
-    text-align: center;
-  }
+.gallery-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-  .projects-wrap {
-    grid-template-columns: unset;
-  }
+.btt-btn {
+  position: fixed;
+  z-index: 999;
+  bottom: 10px;
+  right: 10px;
+}
 
-  .projects h1 {
-    font-size: 3rem;
-  }
+.btt-btn svg {
+  height: 40px;
+  width: 40px;
+}
 
-  .home h1 {
-    font-size: 4rem;
-  }
+/* Gallery */
+.gallery {
+  position: fixed;
+  display: none;
+  pointer-events: none;
+  opacity: 0;
+  background: var(--colour1);
+  transition: all 300ms ease-in-out;
+  background: rgba(0,0,0, 0.7);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  z-index: 9999;
+}
 
-  .tooltip {
-    display: none;
-    pointer-events: none;
-  }
+.carousel-wrap {
+  display: grid;
+  grid-template-columns: 4vw calc(92vw - 15px) 4vw;
+  position: relative;
+  overflow-x: hidden;
+  padding: 2rem 0;
+  background-color: var(--colour1);
+}
 
-  .sub-heading{
-    font-size: 1.5rem;
-  }
+.slider {
+  display: flex;
+  transition: transform 250ms ease;
+  max-height: 600px;
+}
 
-  .sub-heading2 {
-    font-size: 1rem;
-  }
+.slider img {
+  /* opacity: 0; */
+  flex: 0 0 calc(calc(92vw - 15px) / var(--section-size));
+  min-width: 100px;
+  width: 100%;
+  transition: transform 200ms ease;
+  transform: translateX(-100%);
+  object-fit: cover;
+  max-height: 600px;
+  padding: 0 1vw;
+}
 
-  .project-btns {
-    justify-content: center;
-    gap: 1rem;
-  }
+.slide-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  z-index: 100;
+  cursor: pointer;
+  width: 4vw;
+  height: 4vw;
+  border-radius: 50%;
+  background: var(--colour2);
+  box-shadow: 0 4px 10px 0 black;
+}
 
-  .button {
-    width: 120px;
-    height: 40px;
-    font-size: .8rem;
-  }
+.slide-btn svg {
+  width: 2vw;
+  height: 2vw;
+  pointer-events: none;
+  fill: white;
+}
 
-  .project-btns svg { width: 25px; }
+.slide-btn:hover {
+  background-color: var(--colour4);
 }
