--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -64,7 +64,8 @@ a { text-decoration:none; }
 }
 
 .datepicker-form label{
-  padding:5px 0;
+  pointer-events: none;
+  padding: 5px 0;
   text-align:center;
 }
 
