--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   --colour3: #23282c;
   --colour4: #364d6b;
   --colour5: #111;
+  --colour6: #373f46;
   --section-size: 2;
   --slider-index: 1;
 }
@@ -124,6 +125,7 @@ nav ul li a:hover {
 .projects h1 {
   text-align: center;
   margin-bottom: 4rem;
+  color: var(--colour4);
 }
 
 .projects-wrap {
@@ -140,19 +142,20 @@ nav ul li a:hover {
   display: grid;
   gap: 1.5rem;
   padding: 3rem;
-  background: var(--colour4);
-  color: var(--colour1);
+  color: var(--colour5);
   position: relative;
   transition: all 150ms ease-in-out;
+  border-radius: 10px;
 }
 
 .project-card:hover {
-  transform: translate(3px, -3px);
-  box-shadow: -8px 8px 10px 0 #999;
+  transform: translate(0px, 5px);
+  box-shadow: inset 0 5px 12px 1px #bebdbd;
 }
 
 .project-card h2 {
-
+  color: var(--colour4);
+  border-bottom: 6px solid var(--colour2);
 }
 
 .project-btns {
@@ -161,7 +164,7 @@ nav ul li a:hover {
 }
 
 .dark-section {
-  background: linear-gradient(135deg, #373f46, #23282c);
+  background: linear-gradient(135deg, var(--colour6), var(--colour3));
   box-shadow: 0 0 20px 0 #888;
 }
 
@@ -193,18 +196,21 @@ nav ul li a:hover {
   align-items: center;
   gap: 10px;
   border-radius: 10px;
-  border: 4px solid var(--colour3);
+  border: 4px solid var(--colour2);
+  color: var(--colour5);
   padding: .5rem .9rem;
   transition: all 150ms ease-in-out;
 }
 
-.project-btn:hover {
-  background: var(--colour3);
+.project-btn:hover, .project-btn:hover > svg {
+  background: var(--colour2);
+  color: var(--colour1);
+  fill: var(--colour1);
 }
 
 .project-btns svg {
   width: 30px;
-  fill: var(--colour1);
+  fill: var(--colour5);
   transition: all 150ms ease-in-out;
 }
 
