--- a/styles.css
+++ b/styles.css
@@ -149,13 +149,13 @@ nav ul li a:hover {
 }
 
 .project-card:hover {
-  transform: translate(0px, 5px);
-  box-shadow: inset 0 5px 12px 1px #bebdbd;
+  transform: translate(0px, -5px);
+  box-shadow: 0 5px 12px 1px #bebdbd;
 }
 
 .project-card h2 {
   color: var(--colour4);
-  border-bottom: 6px solid var(--colour2);
+  border-bottom: 4px solid var(--colour2);
 }
 
 .project-btns {
