--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   font-size: 16px;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
   --colour1: #fcfcfc;
-  --colour2: #e4125f;
+  --colour2: #f1f1f1;
   --colour3: #292526;
   --colour4: #dd608d;
   --colour5: #201c1d;
@@ -49,7 +49,7 @@ header {
   display: grid;
   justify-items: center;
   align-items: center;
-  padding: 3rem;
+  padding: 8rem 3rem;
   min-height: 35vh;
 }
 
@@ -97,8 +97,8 @@ nav ul li a:hover {
   width: fit-content;
   padding: .8rem 1.4rem;
   color: var(--colour1);
-  background: var(--colour2);
-  border: .3rem solid var(--colour2);
+  background: var(--colour4);
+  border: .3rem solid var(--colour4);
   border-radius: 10px;
   transition: 200ms ease-in-out;
   text-decoration: none;
@@ -115,13 +115,12 @@ nav ul li a:hover {
 
 .projects {
   padding: 5rem;
-  background: var(--colour3);
 }
 
 .projects h1 {
   text-align: center;
   margin-bottom: 4rem;
-  color: var(--colour1);
+  color: var(--colour5);
 }
 
 .projects-wrap {
@@ -138,20 +137,20 @@ nav ul li a:hover {
   display: grid;
   gap: 1.5rem;
   padding: 3rem;
-  background: var(--colour5);
-  color: var(--colour1);
+  background: var(--colour2);
+  color: var(--colour5);
   position: relative;
   transition: all 150ms ease-in-out;
   border-radius: 10px;
-  box-shadow: 0 8px 10px 0 #222;
-  border: 3px solid var(--colour5);
+  box-shadow: 0 6px 12px 0 #ccc;
+  border: 4px solid var(--colour2);
 }
 .project-card:hover {
-  border: 3px solid var(--colour4);
+  border: 4px solid var(--colour6);
 }
 
 .project-card h2 {
-  color: var(--colour1);
+  color: var(--colour6);
 }
 
 .project-btns {
@@ -160,7 +159,7 @@ nav ul li a:hover {
 }
 
 .dark-section {
-  background: linear-gradient(0deg, var(--colour6), var(--colour7));
+  background: linear-gradient(0deg, var(--colour5), var(--colour3));
   box-shadow: 0 8px 10px 0 #ccc;
 }
 
@@ -168,7 +167,7 @@ nav ul li a:hover {
   width: 20rem;
   height: 10rem;
   object-fit: cover;
-  box-shadow: 6px 6px 10px 0 var(--colour5);
+  box-shadow: 0 6px 12px 0 #111;
 }
 
 .divider {
@@ -182,19 +181,21 @@ nav ul li a:hover {
   align-items: center;
   gap: 10px;
   border-radius: 10px;
-  background: var(--colour3);
-  color: var(--colour1);
+  background: var(--colour7);
+  color: var(--colour5);
   padding: .5rem .9rem;
   transition: all 150ms ease-in-out;
 }
 
 .project-btn:hover, .project-btn:hover > svg {
-  background: var(--colour4);
+  background: var(--colour5);
+  color: var(--colour1);
+  fill: var(--colour1);
 }
 
 .project-btns svg {
   width: 30px;
-  fill: var(--colour1);
+  fill: var(--colour5);
   transition: all 150ms ease-in-out;
 }
 
@@ -203,7 +204,7 @@ nav ul li a:hover {
   width: fit-content;
   padding: .8rem 1rem;
   transition: all 150ms ease-in-out;
-  border: 4px solid var(--colour1);
+  border: 4px solid var(--colour4);
   background: unset;
   color: var(--colour1);
   font-size: 1rem;
@@ -211,8 +212,7 @@ nav ul li a:hover {
 }
 
 .gallery-btn:hover {
-  background: var(--colour1);
-  color: var(--colour3);
+  background: var(--colour4);
 }
 
 .gallery-text {
@@ -226,7 +226,8 @@ nav ul li a:hover {
   z-index: 999;
   bottom: 10px;
   right: 10px;
-  fill: var(--colour7);
+  fill: var(--colour3);
+  border-radius: 50%;
 }
 
 .btt-btn svg {
@@ -285,7 +286,7 @@ nav ul li a:hover {
   width: 4vw;
   height: 4vw;
   border-radius: 50%;
-  background: var(--colour2);
+  background: var(--colour5);
   box-shadow: 0 4px 10px 0 black;
 }
 
