--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,7 @@
   --colour3: #292526;
   --colour4: #dd608d;
   --colour5: #201c1d;
-  --colour6: #406165;
-  --colour7: #98cdd3;
+  --colour6: #1a1718;
   --section-size: 2;
   --slider-index: 1;
 }
@@ -24,8 +23,8 @@ html { scroll-behavior: smooth; }
 
 body {
   position: relative;
-  color: var(--colour5);
-  background: var(--colour1);
+  color: var(--colour1);
+  background: var(--colour6);
   overflow-x: hidden;
   min-height: 100vh;
 }
@@ -41,55 +40,79 @@ h3 { font-size: 1.1rem; }
 
 section {
   display: grid;
-  justify-content: center;
   padding: 5rem 3rem;
+  margin-left: 30vw;
 }
 
 header {
-  display: grid;
-  justify-items: center;
-  align-items: center;
   padding: 8rem 3rem;
   min-height: 35vh;
+  margin-left: 30vw;
 }
 
 .headline {
   display: grid;
-  justify-items: center;
-  text-align: center;
-  gap: 1rem;
+  gap: .7rem;
+}
+
+.heading {
+  font-size: 4rem;
 }
 
 .header-text {
-  font-size: 1.2rem;
+  color: #ddd;
+}
+
+.nav-hero {
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 1rem 3rem .3rem 1rem;
+}
+
+.nav-header {
+  padding: 1rem 3rem .3rem 1rem;
+  color: #ccc;
+}
+
+hr {
+  height: 1px;
+  width: 100%;
+  background-color: #413c3e;
+  margin-block: .4rem;
 }
 
 nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  height: 100%;
   background: var(--colour3);
-  padding: 2rem;
-  gap: 1rem;
+  padding: 1.2rem;
+  box-shadow: 2px 0 12px 0 #111;
 }
 
 nav ul {
-  display: flex;
-  gap: 1rem;
+  display: grid;
+  height: fit-content;
   color: var(--colour1);
   list-style: none;
 }
 
+nav ul li {
+  display: flex;
+}
+
 nav ul li a {
-  font-size: 1.1rem;
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: fit-content;
+  gap: .7rem;
+  padding: 1rem 3rem 1rem 1rem;
+  border-radius: 5px;
+  font-size: .9rem;
+  width: 100%;
   transition: all 100ms ease-in-out;
 }
 
 nav ul li a:hover {
+  background: var(--colour5);
   color: var(--colour4);
 }
 
@@ -99,12 +122,12 @@ nav ul li a:hover {
   color: var(--colour1);
   background: var(--colour4);
   border: .3rem solid var(--colour4);
-  border-radius: 10px;
+  border-radius: 5px;
   transition: 200ms ease-in-out;
   text-decoration: none;
   display: block;
   font-size: 1.1rem;
-  box-shadow: 0px 5px #9e385e, 0px 7px 10px #999;
+  box-shadow: 0px 5px #9e385e, 0px 7px 10px #000;
   margin-top: 1rem;
 }
 
@@ -113,20 +136,13 @@ nav ul li a:hover {
   transform: translateY(4px);
 }
 
-.projects {
-  padding: 5rem;
-}
-
 .projects h1 {
-  text-align: center;
   margin-bottom: 4rem;
-  color: var(--colour5);
 }
 
 .projects-wrap {
   display: grid;
   grid-template-columns: repeat(auto-fill, 600px);
-  justify-content: center;
   gap: 3rem;
   max-width: 1300px;
   min-width: 350px;
@@ -137,30 +153,20 @@ nav ul li a:hover {
   display: grid;
   gap: 1.5rem;
   padding: 3rem;
-  background: var(--colour2);
-  color: var(--colour5);
+  background: var(--colour5);
   position: relative;
   transition: all 150ms ease-in-out;
   border-radius: 10px;
-  box-shadow: 0 6px 12px 0 #ccc;
-  border: 4px solid var(--colour2);
+  box-shadow: 0 6px 12px 0 #000;
+  border: 4px solid var(--colour3);
 }
 .project-card:hover {
-  border: 4px solid var(--colour6);
-}
-
-.project-card h2 {
-  color: var(--colour6);
+  border: 4px solid var(--colour4);
 }
 
 .project-btns {
   display: flex;
   gap: 1rem;
-}
-
-.dark-section {
-  background: linear-gradient(0deg, var(--colour5), var(--colour3));
-  box-shadow: 0 8px 10px 0 #ccc;
 }
 
 .img {
@@ -181,22 +187,30 @@ nav ul li a:hover {
   align-items: center;
   gap: 10px;
   border-radius: 10px;
-  background: var(--colour7);
-  color: var(--colour5);
+  background: #111;
   padding: .5rem .9rem;
   transition: all 150ms ease-in-out;
 }
 
 .project-btn:hover, .project-btn:hover > svg {
-  background: var(--colour5);
-  color: var(--colour1);
-  fill: var(--colour1);
+  background: var(--colour4);
+  color: var(--colour6);
+  fill: var(--colour6);
 }
 
 .project-btns svg {
   width: 30px;
-  fill: var(--colour5);
+  fill: var(--colour1);
   transition: all 150ms ease-in-out;
+}
+
+.dark-section {
+  margin-left: unset;
+  background: #141213;
+  border-bottom: 1px solid var(--colour3);
+  border-top: 1px solid var(--colour3);
+  box-shadow: inset 0 0 20px 10px #101010;
+  padding: 5rem 3rem 5rem calc(3rem + 30vw);
 }
 
 .gallery-btn {
@@ -232,7 +246,7 @@ nav ul li a:hover {
   bottom: 10px;
   right: 10px;
   border-radius: 50%;
-  background: var(--colour7);
+  background: var(--colour2);
 }
 
 .btt-btn svg {
