--- a/styles.css
+++ b/styles.css
@@ -280,14 +280,70 @@ nav ul li a:hover {
   width: 40px;
 }
 
+.mobile-dropdown-toggle {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
 /* Screens under 600px styles */
 @media screen and (max-width: 600px) {
-  nav {
-    padding: 2rem 1rem;
+  h1 {
+    font-size: 2.5rem;
   }
 
-  nav ul li a {
-    font-size: .9rem;
+  .nav-hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+  }
+
+  .mobile-dropdown-toggle {
+    display: flex;
+    background: unset;
+    color: var(--colour1);
+  }
+
+  .navbar {
+    position: absolute;
+    background: var(--colour3);
+    inset: 0;
+    top: 70px;
+    height: calc(100dvh - 70px);
+  }
+
+  .cta {
+    padding: .6rem 1rem;
+    font-size: 1rem;
+  }
+
+  nav {
+    z-index: 99;
+    top: 0;
+    position: fixed;
+    width: 100%;
+    height: 70px;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  header {
+    margin-left: unset;
+    padding: 6rem 2rem 2rem 2rem;
+  }
+
+  section {
+    margin-left: unset;
+    padding: 3rem 2rem;
+  }
+
+  .dark-section {
+    padding: 3rem 2rem;
   }
 
   .projects {
