--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -1,10 +1,9 @@
 * {padding:0; border:0; margin:0; box-sizing:border-box;}
 
 body {
+  background: #333;
   color: #eee;
   font-size: 16px;
-  background: linear-gradient(140deg, rgb(24, 24, 24), rgb(78, 78, 78));
-  background-repeat: no-repeat;
   height: 100vh;
 }
 
